tests/bad/operator_overload_multiple.oc
/// fail: Operator overload for Minus already exists (two)

struct Foo {}

[operator "+"]
[operator "-"]
def one(a: Foo, b: Foo): Foo => a

[operator "-"]
def two(a: Foo, b: Foo): Foo => a
